--- a/product-browsing.html
+++ b/product-browsing.html
@@ -5,14 +5,13 @@
         <title>Bun Bun Bake Shop</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=Sacramento&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">    
     </head>
-    
     <body>
 
         <header>
             <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
-            <h1>Bun Bun Bake Shop</h1>
+            <h1>Cinnamon Rolls</h1>
             <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
         </header>
 
@@ -25,11 +24,13 @@
         <p class="browsing-caption">For any of our scrumptious flavors, eat it plain or choose a delicious glaze of sugar-milk, vanilla-milk, or double-chocolate! Buy in batches of 1, 3, 6, or 12, so you can share with friends or eat them all yourself!</p>
 
         <div class="browsing-container">
-            <div class="browsing-card">
-                <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Original</p>
-                <p class="product-price">$2.50</p>
-            </div>
+            <a href="product-detail.html">
+                <div class="browsing-card">
+                    <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Original</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
             <div class="browsing-card">
                 <img src="images/joseph-gonzalez-AQSga3jii8A-unsplash.jpg" alt="original" class="browsing-img">
                 <p class="product-name">Blackberry</p>
