Added product detail html and styles

--- a/home-page.html
+++ b/home-page.html
@@ -5,7 +5,7 @@
         <title>Bun Bun Bake Shop</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;700&family=Sacramento&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;600;700&family=Sacramento&display=swap" rel="stylesheet">
     </head>
     
     <body>
