Added cart page html and styles

--- a/product-detail.html
+++ b/product-detail.html
@@ -22,7 +22,7 @@
             <a href="#">Contact</a>
         </nav>
 
-        <p class="back-to-browse"><a href="product-browsing.html">&lt; Back to Browse</a></p>
+        <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
             <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-original-img">
             <div class="detail-original-container">
@@ -42,7 +42,7 @@
                 </div>
                 
                 <div class="detail-dropdown">
-                    <label for="Glaze">Glaze:</label>
+                    <label for="glaze">Glaze:</label>
                     <select name="glaze" id="glaze">
                         <option value="None">None</option>
                         <option value="Sugar-milk">Sugar-milk</option>
