Made cart on product detail clickable

--- a/product-detail.html
+++ b/product-detail.html
@@ -13,7 +13,7 @@
         <header>
             <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
-            <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
+            <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
         </header>
 
         <nav>
