Added active class on nav

--- a/product-browsing.html
+++ b/product-browsing.html
@@ -16,7 +16,7 @@
         </header>
 
         <nav>
-            <a href="product-browsing.html">Shop</a>
+            <a href="product-browsing.html" class="active">Shop</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </nav>
