--- a/product-detail.html
+++ b/product-detail.html
@@ -45,9 +45,9 @@
                     <label for="glaze">Glaze:</label>
                     <select name="glaze" id="glaze">
                         <option value="None">None</option>
-                        <option value="Sugar-milk">Sugar-milk</option>
-                        <option value="Vanilla-milk">Vanilla-milk</option>
-                        <option value="Double Chocolate">Double Chocolate</option>
+                        <option value="Sugar-milk">Sugar-Milk</option>
+                        <option value="Vanilla-milk">Vanilla-Milk</option>
+                        <option value="Double-chocolate">Double-Chocolate</option>
                     </select>
                 </div>
             </div>
