Added product detail pages

--- a/product-browsing.html
+++ b/product-browsing.html
@@ -31,31 +31,41 @@
                     <p class="product-price">$2.50</p>
                 </div>
             </a>
-            <div class="browsing-card">
-                <img src="images/joseph-gonzalez-AQSga3jii8A-unsplash.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Blackberry</p>
-                <p class="product-price">$2.50</p>
-            </div>
-            <div class="browsing-card">
-                <img src="images/1 fallon-michael-H6OBZaVveCA-unsplash.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Walnut</p>
-                <p class="product-price">$2.50</p>
-            </div>
-            <div class="browsing-card">
-                <img src="images/2 fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Original (Gluten Free)</p>
-                <p class="product-price">$2.50</p>
-            </div>
-            <div class="browsing-card">
-                <img src="images/cinnamon-roll-4719023_1920.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Pumpkin Spice</p>
-                <p class="product-price">$2.50</p>
-            </div>
-            <div class="browsing-card">
-                <img src="images/karolina-wv-b22kPrO6Zsk-unsplash.jpg" alt="original" class="browsing-img">
-                <p class="product-name">Caramel Pecan</p>
-                <p class="product-price">$2.50</p>
-            </div>
+            <a href="product-detail-blackberry.html">
+                <div class="browsing-card">
+                    <img src="images/joseph-gonzalez-AQSga3jii8A-unsplash.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Blackberry</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
+            <a href="product-detail-walnut.html">
+                <div class="browsing-card">
+                    <img src="images/1 fallon-michael-H6OBZaVveCA-unsplash.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Walnut</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
+            <a href="product-detail-orig-gf.html">
+                <div class="browsing-card">
+                    <img src="images/2 fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Original (Gluten Free)</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
+            <a href="product-detail-pumpkin.html">
+                <div class="browsing-card">
+                    <img src="images/cinnamon-roll-4719023_1920.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Pumpkin Spice</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
+            <a href="product-detail-caramel-pecan.html">
+                <div class="browsing-card">
+                    <img src="images/karolina-wv-b22kPrO6Zsk-unsplash.jpg" alt="original" class="browsing-img">
+                    <p class="product-name">Caramel Pecan</p>
+                    <p class="product-price">$2.50</p>
+                </div>
+            </a>
         </div>
     
     </body>
