--- a/product-detail-blackberry.html
+++ b/product-detail-blackberry.html
@@ -24,11 +24,11 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/joseph-gonzalez-AQSga3jii8A-unsplash.jpg" alt="Blackberry" class="detail-img">
             <div class="detail-original-container">
-                <h2 class="detail-name">Original</h2>
+                <h2 class="detail-name">Blackberry</h2>
                 <p class="detail-price">$2.50</p>
-                <p class="detail-original-desc">Our classic cinnamon roll. Gooey, buttery, cinnamon-y. The size of a small child’s head.</p>
+                <p class="detail-original-desc">Our cinnamon roll with blackberries, freshly picked from bushes down the road.</p>
             
             <div class="dropdowns">
                 <div class="detail-dropdown">
