--- a/product-detail-pumpkin.html
+++ b/product-detail-pumpkin.html
@@ -24,11 +24,11 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/cinnamon-roll-4719023_1920.jpg" alt="Original" class="detail-img">
             <div class="detail-original-container">
-                <h2 class="detail-name">Original</h2>
+                <h2 class="detail-name">Pumpkin Spice</h2>
                 <p class="detail-price">$2.50</p>
-                <p class="detail-original-desc">Our classic cinnamon roll. Gooey, buttery, cinnamon-y. The size of a small child’s head.</p>
+                <p class="detail-original-desc">The perfect fall treat! A warm cinnamon roll flavored with pumpkin and warm spices.</p>
             
             <div class="dropdowns">
                 <div class="detail-dropdown">
