Added total and check out button to cart

--- a/cart-page.html
+++ b/cart-page.html
@@ -24,7 +24,7 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Continue Shopping</a></p>
 
-        <div class="cart-container">    <!-- BORDER? -->
+        <div class="cart-container">
             <div class="cart-items">
                 <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash-cart.jpg" alt="Original" class="cart-img">
                 <div class="cart-items-details">
@@ -53,6 +53,10 @@
                 </div> <!-- cart-items-details -->
                 <img class="cart-X" src="images/cart-X.svg" alt="X-icon">
             </div> <!-- cart-items -->
+            <p class="cart-total">Total: $7.50</p>
+            <div class="check-out-btn-div">
+                <button class="check-out-btn">Check Out</button>
+            </div>
         </div> <!-- cart-container -->
 
     </body>
