Reorganize files to create a repo for the whole course

--- a/Homework 5/home-page.html
+++ b/Homework 5/home-page.html
@@ -26,8 +26,8 @@
             <div class="slide">
                 <a href="product-browsing.html"><img class="carousel-img" src="images/klara-avsenik-__6BAhm9jqs-unsplash.jpg" alt="a container with cinnamon rolls, a white plate with a cinnamon roll on it, and a red pitcher with coffee on a white-tableclothed table"></a>
             </div>
-            <div class="carousel-l-arrow"><img src="images/L arrow.svg"></div>
-            <div class="carousel-r-arrow"><img src="images/R arrow.svg"></div>
+            <div class="carousel-l-arrow"><img src="images/L_arrow.svg" alt="carousel left arrow"></div>
+            <div class="carousel-r-arrow"><img src="images/R_arrow.svg" alt="carousel right arrow"></div>
             <a href="product-browsing.html"><div class="carousel-caption">Treat Yourself</div></a>
             <div class="slide">
                 <a href="product-browsing.html"><img class="carousel-img" src="images/mark-olsen-oZqJMbQMJ-4-unsplash.jpg" alt="close-up of cinnamon rolls with icing"></a>
