--- a/Homework 5/product-browsing.html
+++ b/Homework 5/product-browsing.html
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
         </header>
@@ -40,14 +40,14 @@
             </a>
             <a href="product-detail-walnut.html">
                 <div class="browsing-card">
-                    <img src="images/1 fallon-michael-H6OBZaVveCA-unsplash.jpg" alt="original" class="browsing-img">
+                    <img src="images/1_fallon-michael-H6OBZaVveCA-unsplash.jpg" alt="original" class="browsing-img">
                     <p class="product-name">Walnut</p>
                     <p class="product-price">$2.50</p>
                 </div>
             </a>
             <a href="product-detail-orig-gf.html">
                 <div class="browsing-card">
-                    <img src="images/2 fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="original" class="browsing-img">
+                    <img src="images/2_fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="original" class="browsing-img">
                     <p class="product-name">Original (Gluten Free)</p>
                     <p class="product-price">$2.50</p>
                 </div>
