--- a/Homework 5/product-detail-blackberry.html
+++ b/Homework 5/product-detail-blackberry.html
@@ -11,7 +11,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
         </header>
@@ -24,11 +24,11 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/karolina-wv-b22kPrO6Zsk-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/joseph-gonzalez-AQSga3jii8A-unsplash.jpg" alt="Blackberry" class="detail-img">
             <div class="detail-original-container">
-                <h2 class="detail-name">Caramel Pecan</h2>
+                <h2 class="detail-name">Blackberry</h2>
                 <p class="detail-price">$2.50</p>
-                <p class="detail-original-desc">Silky caramel + crunchy pecan = our most decadent cinnamon roll.</p>
+                <p class="detail-original-desc">Our cinnamon roll with blackberries, freshly picked from bushes down the road.</p>
             
             <div class="dropdowns">
                 <div class="detail-dropdown">
