--- a/Homework 5/product-detail.html
+++ b/Homework 5/product-detail.html
@@ -11,7 +11,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
         </header>
@@ -24,11 +24,11 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/1 fallon-michael-H6OBZaVveCA-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-img">
             <div class="detail-original-container">
-                <h2 class="detail-name">Walnut</h2>
+                <h2 class="detail-name">Original</h2>
                 <p class="detail-price">$2.50</p>
-                <p class="detail-original-desc">A gooey cinnamon roll with some added crunch!</p>
+                <p class="detail-original-desc">Our classic cinnamon roll. Gooey, buttery, cinnamon-y. The size of a small child’s head.</p>
             
             <div class="dropdowns">
                 <div class="detail-dropdown">
