--- a/Homework 5/cart-page.html
+++ b/Homework 5/cart-page.html
@@ -11,7 +11,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cart</h1>
             <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
         </header>
