--- a/Homework 5/product-detail-orig-gf.html
+++ b/Homework 5/product-detail-orig-gf.html
@@ -11,7 +11,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
         </header>
@@ -24,7 +24,7 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/2 fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/2_fallon-michael-DnGGIffnjTY-unsplash.jpg" alt="Original" class="detail-img">
             <div class="detail-original-container">
                 <h2 class="detail-name">Original (Gluten Free)</h2>
                 <p class="detail-price">$2.50</p>
