Changed home-page.html to index.html on other pages

--- a/Homework 5/product-browsing.html
+++ b/Homework 5/product-browsing.html
@@ -10,7 +10,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="index.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
         </header>
