--- a/Homework 5/product-detail-caramel-pecan.html
+++ b/Homework 5/product-detail-caramel-pecan.html
@@ -11,7 +11,7 @@
     <body>
 
         <header>
-            <a href="home-page.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
+            <a href="index.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
             <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
         </header>
