Added lang attribute to html

--- a/Homework_5/cart-page.html
+++ b/Homework_5/cart-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
         <title>Bun Bun Bake Shop</title>
@@ -28,7 +28,7 @@
             <div class="cart-items">
                 <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash-cart.jpg" alt="Original" class="cart-img">
                 <div class="cart-items-details">
-                    <p class="cart-details-name">Original</h2>
+                    <p class="cart-details-name">Original</p>
                     <p class="cart-details-price">$2.50</p>
                     <div class="cart-dropdowns">
                         <div class="cart-details-dropdown">
