--- a/Homework_5/index.html
+++ b/Homework_5/index.html
@@ -23,12 +23,20 @@
         </nav>
 
         <div class="carousel">
+
+            <!-- First carousel photo -->
             <div class="slide">
                 <a href="product-browsing.html"><img class="carousel-img" src="images/klara-avsenik-__6BAhm9jqs-unsplash.jpg" alt="a container with cinnamon rolls, a white plate with a cinnamon roll on it, and a red pitcher with coffee on a white-tableclothed table"></a>
             </div>
+
+            <!-- Carousel arrows -->
             <div class="carousel-l-arrow"><img src="images/L_arrow.svg" alt="carousel left arrow"></div>
             <div class="carousel-r-arrow"><img src="images/R_arrow.svg" alt="carousel right arrow"></div>
+
+            <!-- Carousel caption -->
             <a href="product-browsing.html"><div class="carousel-caption">Treat Yourself</div></a>
+
+            <!-- Other carousel photos -->
             <div class="slide">
                 <a href="product-browsing.html"><img class="carousel-img" src="images/mark-olsen-oZqJMbQMJ-4-unsplash.jpg" alt="close-up of cinnamon rolls with icing"></a>
             </div>
@@ -38,7 +46,8 @@
             <div class="slide">
                 <a href="product-browsing.html"><img class="carousel-img" src="images/sarah-shaffer-KUNRtYp8qd8-unsplash.jpg" alt="stacks of cinnamon rolls"></a>
             </div>
-        </div>
+            
+        </div> <!-- .carousel -->
     </body>
 
 </html>
