--- a/Homework_5/product-browsing.html
+++ b/Homework_5/product-browsing.html
@@ -23,9 +23,9 @@
 
         <p class="browsing-caption">For any of our scrumptious flavors, eat it plain or choose a delicious glaze of sugar-milk, vanilla-milk, or double-chocolate! Buy in batches of 1, 3, 6, or 12, so you can share with friends or eat them all yourself!</p>
 
-        <div class="browsing-container">
+        <div class="browsing-container"> <!-- Contains all products -->
             <a href="product-detail.html">
-                <div class="browsing-card">
+                <div class="browsing-card"> <!-- Each .browsing-card has photo, name, and price of one product -->
                     <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="original" class="browsing-img">
                     <p class="product-name">Original</p>
                     <p class="product-price">$2.50</p>
@@ -66,6 +66,6 @@
                     <p class="product-price">$2.50</p>
                 </div>
             </a>
-        </div>
+        </div> <!-- .browsing-container -->
     
     </body>
