Added image to cart dropdown and fixed formatting

--- a/Homework_6/product-detail.html
+++ b/Homework_6/product-detail.html
@@ -21,10 +21,13 @@
                 <div id="cart-hover" class="hidden">
                     <img src="" alt="">
                     <div class="cart-hover-details">
-                        <p id="cart-hover-name"></p>
-                        <p id="cart-hover-price"></p>
-                        <p id="p-cart-hover-qty">Quantity: <div id="cart-hover-qty"></div></p>
-                        <p id="p-cart-hover-glaze">Glaze: <div id="cart-hover-glaze"></div></p>
+                        <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash-cart.jpg" alt="Original" class="cart-hover-img">
+                        <div class="cart-hover-ps">
+                            <p id="cart-hover-name"></p>
+                            <p id="cart-hover-price"></p>
+                            <p id="p-cart-hover-qty">Quantity: <span id="cart-hover-qty"></span></p>
+                            <p id="p-cart-hover-glaze">Glaze: <span id="cart-hover-glaze"></span></p>
+                        </div>
                     </div>
                     <button class="cart-hover-btn">Check Out</button>
                 </div>
@@ -42,7 +45,7 @@
             <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-img">
             <div class="detail-original-container">
                 <h2 class="detail-name">Original</h2>
-                <p class="detail-price">$2.50</p>
+                <p class="detail-price" id="detail-price">$2.50</p>
                 <p class="detail-original-desc">Our classic cinnamon roll. Gooey, buttery, cinnamon-y. The size of a small child’s head.</p>
             
                 <div class="dropdowns"> <!-- Contains both quantity and glaze dropdowns -->
