Change image based on glaze and fixed button spacing of cart dropdown

--- a/Homework_6/product-detail.html
+++ b/Homework_6/product-detail.html
@@ -21,7 +21,7 @@
                 <div id="cart-hover" class="hidden">
                     <img src="" alt="">
                     <div class="cart-hover-details">
-                        <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash-cart.jpg" alt="Original" class="cart-hover-img">
+                        <img src="images/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Original" class="cart-hover-img" id="cart-hover-img">
                         <div class="cart-hover-ps">
                             <p id="cart-hover-name"></p>
                             <p id="cart-hover-price"></p>
@@ -42,7 +42,7 @@
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
         <div class="detail-container">
-            <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="detail-img">
+            <img src="images/nathan-dumlao-pJllO6r0pKo-unsplash.jpg" alt="Original" class="detail-img" id="detail-img">
             <div class="detail-original-container">
                 <h2 class="detail-name">Original</h2>
                 <p class="detail-price" id="detail-price">$2.50</p>
