Cart dropdown shows multiple items with different glazes

--- a/Homework_6/product-detail.html
+++ b/Homework_6/product-detail.html
@@ -19,16 +19,7 @@
                     <p id="cart-number" class="cart-number-centered">0</p>
                 </div>
                 <div id="cart-hover" class="hidden">
-                    <img src="" alt="">
-                    <div class="cart-hover-details">
-                        <img src="images/rob-sarmiento-RbqgLewxyXo-unsplash.jpg" alt="Original" class="cart-hover-img" id="cart-hover-img">
-                        <div class="cart-hover-ps">
-                            <p id="cart-hover-name"></p>
-                            <p id="cart-hover-price"></p>
-                            <p id="p-cart-hover-qty">Quantity: <span id="cart-hover-qty"></span></p>
-                            <p id="p-cart-hover-glaze">Glaze: <span id="cart-hover-glaze"></span></p>
-                        </div>
-                    </div>
+                    <div class="cart-hover-details" id="cart-hover-details"></div>
                     <button class="cart-hover-btn">Check Out</button>
                 </div>
             </div>
@@ -70,7 +61,7 @@
                     </div>
                 </div> <!-- .dropdowns -->
 
-                <button id="add-to-cart" name="Original" price="$2.75">Add to Cart</button>
+                <button id="add-to-cart">Add to Cart</button>
             
             </div> <!-- .detail-original-container -->
         </div> <!-- .detail-container -->
