Linked Tracking page to Cart page check out button

--- a/Homework_6/cart-page.html
+++ b/Homework_6/cart-page.html
@@ -58,7 +58,7 @@
             <!-- Total and checkout button -->
             <p class="cart-total">Total: $7.50</p>
             <div class="check-out-btn-div">
-                <button class="check-out-btn">Check Out</button>
+                <a href="tracking.html"><button class="check-out-btn">Check Out</button></a>
             </div>
 
         </div>
