--- a/Homework_6/cart-page.html
+++ b/Homework_6/cart-page.html
@@ -57,12 +57,14 @@
 
             <!-- Total and checkout button -->
             <p class="cart-total">Total: $7.50</p>
-            <div class="check-out-btn-div">
-                <a href="tracking.html"><button class="check-out-btn">Check Out</button></a>
-            </div>
+            <form class="check-out-btn-div" action="tracking.html">
+                <button class="check-out-btn" type="submit">Check Out</button>
+            </form>
 
         </div>
 
     </body>
+
+    <script type="text/javascript" src="script.js"></script>
 
 </html>
