Fixed script tag placement

--- a/Homework_6/product-detail.html
+++ b/Homework_6/product-detail.html
@@ -66,8 +66,8 @@
             </div> <!-- .detail-original-container -->
         </div> <!-- .detail-container -->
 
-    </body>
+        <script src="script.js"></script>
 
-    <script type="text/javascript" src="script.js"></script>
+    </body>
 
 </html>
