--- a/Homework_6/product-detail-caramel-pecan.html
+++ b/Homework_6/product-detail-caramel-pecan.html
@@ -52,7 +52,7 @@
                     </div>
                 </div> <!-- .dropdowns -->
 
-                <button class="add-to-cart">Add to Cart</button>
+                <button id="add-to-cart">Add to Cart</button>
             
             </div> <!-- .detail-original-container -->
         </div> <!-- .detail-container -->
