Added My Orders to nav as link to Tracking page

--- a/Homework_6/index.html
+++ b/Homework_6/index.html
@@ -20,6 +20,7 @@
             <a href="product-browsing.html">Shop</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            <a href="tracking.html">My Orders</a>
         </nav>
 
         <div class="carousel">
