--- a/Homework_6/product-browsing.html
+++ b/Homework_6/product-browsing.html
@@ -19,6 +19,7 @@
             <a href="product-browsing.html" class="active">Shop</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            <a href="tracking.html">My Orders</a>
         </nav>
 
         <p class="browsing-caption">For any of our scrumptious flavors, eat it plain or choose a delicious glaze of sugar-milk, vanilla-milk, or double-chocolate! Buy in batches of 1, 3, 6, or 12, so you can share with friends or eat them all yourself!</p>
