--- a/Homework_6/product-detail.html
+++ b/Homework_6/product-detail.html
@@ -29,6 +29,7 @@
             <a href="product-browsing.html" class="active">Shop</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            <a href="tracking.html">My Orders</a>
         </nav>
 
         <p class="back"><a href="product-browsing.html">&lt; Back to Browse</a></p>
