--- a/Homework_6/cart-page.html
+++ b/Homework_6/cart-page.html
@@ -20,6 +20,7 @@
             <a href="product-browsing.html" class="active">Shop</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
+            <a href="tracking.html">My Orders</a>
         </nav>
 
         <p class="back"><a href="product-browsing.html">&lt; Continue Shopping</a></p>
