Cart number stays updated when move between product detail pages

--- a/Homework_6B/product-detail.html
+++ b/Homework_6B/product-detail.html
@@ -16,7 +16,7 @@
             <div class="detail-cart-container">
                 <div class="cart-icon-container">
                     <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
-                    <p id="cart-number" class="cart-number-centered">0</p>
+                    <p id="cart-number" class="cart-number-centered"></p>
                 </div>
                 <div id="cart-hover" class="hidden">
                     <div class="cart-hover-details" id="cart-hover-details"></div>
