--- a/Homework_6B/product-browsing.html
+++ b/Homework_6B/product-browsing.html
@@ -12,7 +12,10 @@
         <header>
             <a href="index.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
-            <img src="images/Cart.svg" alt="cart icon" class="cart-icon">
+            <div class="cart-icon-container">
+                <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
+                <p id="cart-number" class="cart-number-centered"></p>
+            </div>
         </header>
 
         <nav>
