Made Check Out button in cart dropdown clickable to cart page

--- a/Homework_6B/cart-page.html
+++ b/Homework_6B/cart-page.html
@@ -30,9 +30,9 @@
 
             <!-- Total and checkout button -->
             <p class="cart-total">Total: $<span id="cart-total"></span></p>
-            <div class="check-out-btn-div">
-                <button class="check-out-btn">Check Out</button>
-            </div>
+            <form class="check-out-btn-div" action="tracking.html">
+                <button class="check-out-btn" type="submit">Check Out</button>
+            </form>
 
         </div>
     
