--- a/Homework_6B/product-detail.html
+++ b/Homework_6B/product-detail.html
@@ -20,7 +20,9 @@
                 </div>
                 <div id="cart-hover" class="hidden">
                     <div class="cart-hover-details" id="cart-hover-details"></div>
-                    <button class="cart-hover-btn">Check Out</button>
+                    <form action="cart-page.html">
+                        <button class="cart-hover-btn">Check Out</button>
+                    </form>
                 </div>
             </div>
         </header>
