Cart dropdown retains items across product detail pages

--- a/Homework_6B/product-browsing.html
+++ b/Homework_6B/product-browsing.html
@@ -12,9 +12,9 @@
         <header>
             <a href="index.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
-            <div class="cart-icon-container">
-                <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
-                <p id="cart-number" class="cart-number-centered"></p>
+            <div class="cart-icon-container-browsing">
+                <a id="cart-anchor-browsing" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
+                <p id="cart-number-browsing" class="cart-number-centered"></p>
             </div>
         </header>
 
