--- a/Homework_6B/product-detail.html
+++ b/Homework_6B/product-detail.html
@@ -13,7 +13,7 @@
         <header>
             <a href="index.html"><img src="images/Bun_Bun.svg" alt="Bun Bun logo" class="logo"></a>
             <h1>Cinnamon Rolls</h1>
-            <div class="detail-cart-container">
+            <div class="detail-cart-container" id="detail-cart-container">
                 <div class="cart-icon-container">
                     <a id="cart-anchor" href="cart-page.html"><img src="images/Cart.svg" alt="cart icon" class="cart-icon"></a>
                     <p id="cart-number" class="cart-number-centered"></p>
@@ -68,7 +68,7 @@
             </div> <!-- .detail-original-container -->
         </div> <!-- .detail-container -->
 
-    <script src="script.js"></script>
+    <script src="product-detail.js"></script>
 
     </body>
 
