Added carousel on product detail pages

--- a/Homework_6B/product-detail.html
+++ b/Homework_6B/product-detail.html
@@ -68,6 +68,43 @@
             </div> <!-- .detail-original-container -->
         </div> <!-- .detail-container -->
 
+        <!-- carousel -->
+        <h2>Similar Products</h2>
+        <div class="product-carousel" id="product-carousel">
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/otto-norin-uG3Vu5TXKxE-unsplash.jpg" alt="aerial shot of cinnamon rolls with flaky salt on top">
+                <p class="carousel-name">Bun with Flaky Salt</p>
+                <p class="carousel-price">$2.75</p>
+            </div>
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/robert-eklund-N1rf9GmY_5A-unsplash.jpg" alt="aerial shot of cinnamon rolls with white non-pareils on top">
+                <p class="carousel-name">Bun with Sprinkles</p>
+                <p class="carousel-price">$3.00</p>
+            </div>
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/lauren-gray-hIVJpzJ45_A-unsplash.jpg" alt="cinnamon rolls with excessive glaze">
+                <p class="carousel-name">Extra Glaze</p>
+                <p class="carousel-price">$5.00</p>
+            </div>
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/klara-avsenik-__6BAhm9jqs-unsplash.jpg" alt="a container with cinnamon rolls, a white plate with a cinnamon roll on it, and a red pitcher with coffee on a white-tableclothed table">
+                <p class="carousel-name">Bundle of 20</p>
+                <p class="carousel-price">$24</p>
+            </div>
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/mark-olsen-oZqJMbQMJ-4-unsplash.jpg" alt="close-up of cinnamon rolls with icing">
+                <p class="carousel-name">Bundle of 30</p>
+                <p class="carousel-price">$32</p>
+            </div>
+            <div class="product-carousel-slide">
+                <img class="product-carousel-img" src="carousel-images/sarah-shaffer-KUNRtYp8qd8-unsplash.jpg" alt="stacks of cinnamon rolls">
+                <p class="carousel-name">Pile of buns</p>
+                <p class="carousel-price">$40</p>
+            </div>
+        </div>
+        <div class="product-carousel-l-arrow" id="product-carousel-l"><img src="images/L_arrow.svg" alt="carousel left arrow"></div>
+        <div class="product-carousel-r-arrow" id="product-carousel-r"><img src="images/R_arrow.svg" alt="carousel right arrow"></div>
+
     <script src="product-detail.js"></script>
 
     </body>
